[package]
name = "password"
version = "0.1.0"
authors = ["schrodingerzhu <i@zhuyi.fan>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.13"
structopt = "0.3"
rpassword = "4"
mimalloc = { version = "*", features = ["secure-full"] }
clipboard = "0.5"
botan = "0.6"